--- a/index.html
+++ b/index.html
@@ -6,5 +6,41 @@
   <body>
     <h1>Welcome to my Data Analyst Website</h1>
     <p>Here you will find information about my skills, experience, and projects as a data analyst.</p>
+   <nav>
+      <ul>
+         <li><a href="#about">About</a></li>
+         <li><a href="#skills">Skills</a></li>
+         <li><a href="#experience">Experience</a></li>
+         <li><a href="#projects">Projects</a></li>
+      </ul>
+   </nav>
+    <section id="about">
+  <h2>About</h2>
+  <p>Insert information about yourself and your background as a data analyst here.</p>
+</section>
+
+<section id="skills">
+  <h2>Skills</h2>
+  <ul>
+    <li>Data cleaning</li>
+    <li>Data visualization</li>
+    <li>Data analysis</li>
+  </ul>
+</section>
+
+<section id="experience">
+  <h2>Experience</h2>
+  <p>Insert information about your previous experience as a data analyst here.</p>
+</section>
+
+<section id="projects">
+  <h2>Projects</h2>
+  <ul>
+    <li>Project 1: Title</li>
+    <li>Project 2: Title</li>
+    <li>Project 3: Title</li>
+  </ul>
+</section>
+
   </body>
 </html>
